--- a/.github/workflows/flyway.yml
+++ b/.github/workflows/flyway.yml
@@ -24,7 +24,7 @@ jobs:
       env:
         POSTGRES_USER: ${{ secrets.DB_USER }}
         POSTGRES_PASSWORD: ${{ secrets.DB_PASSWORD }}
-        POSTGRES_DB: ${{ secrets.DB }}
+        POSTGRES_DB: ${{ secrets.DB_NAME }}
 
     services:
       postgres:
@@ -32,7 +32,7 @@ jobs:
         env:
           POSTGRES_USER: ${{ secrets.DB_USER }}
           POSTGRES_PASSWORD: ${{ secrets.DB_PASSWORD }}
-          POSTGRES_DB: ${{ secrets.DB }}
+          POSTGRES_DB: ${{ secrets.DB_NAME }}
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
