--- a/.github/workflows/flyway.yml
+++ b/.github/workflows/flyway.yml
@@ -20,7 +20,17 @@ jobs:
         run: echo STARTING POSTGRES
 
       - name: Start PostgreSQL Container
-        run: docker run --name postgres -e POSTGRES_USER=${{ secrets.DB_USER }} -e POSTGRES_PASSWORD=${{ secrets.DB_PASSWORD }} -e POSTGRES_DB=${{ secrets.DB_NAME }} -p 5432:5432 -d postgres
+        run: |
+          docker run --name postgres \
+            -e POSTGRES_USER=${{ secrets.DB_USER }} \
+            -e POSTGRES_PASSWORD=${{ secrets.DB_PASSWORD }} \
+            -e POSTGRES_DB=${{ secrets.DB_NAME }} \
+            -p 5432:5432 \
+            --health-cmd="pg_isready" \
+            --health-interval="10s" \
+            --health-timeout="5s" \
+            --health-retries=5 \
+            -d postgres
 
       - name: Running Flyway Migration
         run: echo RUNNING FLYWAY MIGRATION
