--- a/.github/workflows/flyway.yml
+++ b/.github/workflows/flyway.yml
@@ -38,6 +38,8 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Setup Flyway
+        env: 
+          FLYWAY_VERSION: 9.16.3
         run: |
           wget -qO- https://download.red-gate.com/maven/release/org/flywaydb/enterprise/flyway-commandline/${{ env.FLYWAY_VERSION }}/flyway-commandline-${{ env.FLYWAY_VERSION }}-linux-x64.tar.gz | tar -xvz && sudo ln -s `pwd`/flyway-${{ env.FLYWAY_VERSION }}/flyway /usr/local/bin 
   
