--- a/.github/workflows/flyway.yml
+++ b/.github/workflows/flyway.yml
@@ -51,7 +51,7 @@ jobs:
           FLYWAY_USER: ${{ secrets.DB_USER }}
           FLYWAY_PASSWORD: ${{ secrets.DB_PASSWORD }}
           FLYWAY_SCHEMAS: flyway,public
-          FLYWAY_LOCATIONS: filesystem:../../sql
+          FLYWAY_LOCATIONS: filesystem:./sql
         run: |
           flyway migrate
 
