--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,23 @@
+# Editor directories and files
 .vscode/
+
+#API
 bin/
 obj/
+
+# Client
+package-lock.json
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+dist
+dist-ssr
+*.local
